# axum-api

./: .env  Cargo.toml  README.md  down.sh  reset_test_db.sh  test.sh  up.sh
.github/workflows/: rust_ci.yml
db/: docker-compose.yml
db/dev/: docker-compose.yml
db/test/: docker-compose.yml  reset.sh
migrations/2023-08-22-135446_create_roles/: down.sql  up.sql
migrations/2023-08-22-135522_create_users/: down.sql  up.sql
migrations/2023-08-22-152429_create_locations/: down.sql  up.sql
migrations/2023-08-22-152619_create_empires/: down.sql  up.sql
migrations/2023-08-22-152741_create_ships/: down.sql  up.sql
migrations/2023-08-22-152909_create_players/: down.sql  up.sql
migrations/2023-08-22-182035_insert_roles/: down.sql  up.sql
migrations/2023-08-22-182050_insert_locations/: down.sql  up.sql
migrations/2023-08-22-182054_insert_empires/: down.sql  up.sql
migrations/2023-08-22-182103_insert_ships/: down.sql  up.sql
postman/: Axum API.postman_collection.json
src/: db.rs  main.rs  model.rs  schema.rs  util.rs
src/common/: db.rs  error.rs  mod.rs  security.rs  util.rs
src/empires/: model.rs  router.rs  service.rs
src/locations/: mod.rs  model.rs  router.rs  service.rs
src/routes/: locations.rs  mod.rs  users.rs
src/services/: locations.rs  mod.rs  users.rs
src/users/: mod.rs  model.rs  router.rs  service.rs
