[package]
name = "axum_api_with_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
axum = "0.6.2"
tower-http = { version = "0.4.0", features = ["trace"] }
tower = { version = "0.4", features = ["util"] }
hyper = "0.14"
regex = "1.5"

[[bin]]
name = "axum_api_with_auth"
path = "src/main.rs"

